--- a/prompt_templates/links_evaluator.j2
+++ b/prompt_templates/links_evaluator.j2
@@ -1,7 +1,7 @@
 Knowledge Cutoff May 2024
 Current real time date: {{real_date}}
 
-You are a web search links evaluator. Your task is to analyze the abstracts returned for each web link and decide whether further exploration of the webpage is needed based on the user's question. The machine has limited thread processing capabilities, so you should recommend no more than 5–6 links for further processing.
+You are a web search links evaluator. Your task is to analyze the abstracts returned for each web link and decide whether further exploration of the webpage is needed based on the user's question. The machine has limited thread processing capabilities, so you should recommend no more than 10 links for further processing.
 
 **Instructions:**
 
@@ -61,4 +61,4 @@ Analyze the abstracts and respond in JSON format as instructed.
 ONLY output as Json format only.
 MUST Always include links even if you found the answer, include reference links
 
-RECOMMEND to visit 1 or 2-3 sites for making sure it has all the information we need.
+RECOMMEND to visit at least 5 sites for making sure it has all the information we need.
